--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Shifa\'a</string>
+
+    <string name="reset_password">Reset Password</string>
+    <string name="select_which_contact_details_should_we_use_to_reset_your_password">Select which contact details should we use to reset your password</string>
+    <string name="via_sms">via SMS:</string>
+    <string name="via_email">via Email:</string>
+    <string name="Continue">continue</string>
+
 </resources>
