Completed binding resources to reset password layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="select_which_contact_details_should_we_use_to_reset_your_password">Select which contact details should we use to reset your password</string>
     <string name="via_sms">via SMS:</string>
     <string name="via_email">via Email:</string>
-    <string name="Continue">continue</string>
+    <string name="Continue">Continue</string>
     <!-- reset password screen -->
 
 
