--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,6 +116,13 @@
         <item>Urology</item>
         <item>Vascular Surgery</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="create_new_password">Create New Password</string>
+    <string name="create_your_new_password">Create Your New Password</string>
+    <string name="new_password">New Password</string>
+    <string name="confirm_new_password">Confirm New Password</string>
+    <string name="reset_password_btn_text">Reset Password</string>
     <!-- List of specialty (Doctor) -->
 
 
